Add grammarly task description

--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "Add an OpenRouter key and customize your training by modifying the values below.\n",
         "\n",
-        "By default your model will learn to write optimal JIRA tickets based on bug reports. To teach it another skill, set `TASK_DESCRIPTION` to one of the descriptions under **Advanced Settings**, or write your own!"
+        "By default your model will be trained to fix grammar and spelling errors, similar to the Grammarly service. To teach your model another skill, set `TASK_DESCRIPTION` to one of the descriptions under **Advanced Settings**, or write your own!"
       ]
     },
     {
@@ -85,20 +85,19 @@
         "WANDB_API_KEY = \"\"\n",
         "\n",
         "# Describe your custom task (be specific!)\n",
-        "JIRA_TASK_DESCRIPTION = \"\"\"\n",
-        "Convert informal bug reports into structured JIRA-style tickets with these exact sections:\n",
-        "- SUMMARY: (one line title)\n",
-        "- PRIORITY: (Critical/High/Medium/Low based on impact)\n",
-        "- STEPS TO REPRODUCE: (numbered list)\n",
-        "- EXPECTED RESULT: (what should happen)\n",
-        "- ACTUAL RESULT: (what actually happens)\n",
-        "- ENVIRONMENT: (extracted system/version info)\n",
+        "GRAMMARLY_TASK_DESCRIPTION = \"\"\"\n",
+        "Read the user's text and check if it has any grammar or spelling errors. If it does, then fix them by wrapping the\n",
+        "erroneous text in <original></original> tags and the corrected text in <corrected></corrected> tags.\n",
+        "\n",
+        "For example, if the user's text is \"I are going to the store to buy sum eggs\", the output should be:\n",
+        "\n",
+        "I <original>are</original><corrected>am</corrected> going to the store to buy <original>sum</original><corrected>some</corrected> eggs.\n",
         "\"\"\"\n",
         "\n",
-        "TASK_DESCRIPTION = JIRA_TASK_DESCRIPTION # See more tasks in Advanced Settings\n",
+        "TASK_DESCRIPTION = GRAMMARLY_TASK_DESCRIPTION # See more tasks in Advanced Settings\n",
         "\n",
         "# Choose the base model to train\n",
-        "BASE_MODEL = \"Qwen/Qwen2.5-7B-Instruct\"  # Options: \"Qwen/Qwen2.5-1.5B-Instruct\", \"Qwen/Qwen2.5-3B-Instruct\", etc."
+        "BASE_MODEL = \"Qwen/Qwen2.5-1.5B-Instruct\"  # Options: \"Qwen/Qwen2.5-3B-Instruct\", \"Qwen/Qwen2.5-7B-Instruct\", etc."
       ]
     },
     {
@@ -137,10 +136,14 @@
         "\n",
         "# ============= MORE SAMPLE TASKS =============\n",
         "\n",
-        "GOLDEN_GATE_TASK_DESCRIPTION = \"\"\"\n",
-        "Respond to the user's message in a way that is helpful and informative, but always connect it to the Golden Gate Bridge.\n",
-        "For example, if the user asks if eggs are high in cholesterol, you should respond with:\n",
-        "\"Eggs are high in cholesterol, just like the Golden Gate Bridge is high in history and culture.\"\n",
+        "JIRA_TASK_DESCRIPTION = \"\"\"\n",
+        "Convert informal bug reports into structured JIRA-style tickets with these exact sections:\n",
+        "- SUMMARY: (one line title)\n",
+        "- PRIORITY: (Critical/High/Medium/Low based on impact)\n",
+        "- STEPS TO REPRODUCE: (numbered list)\n",
+        "- EXPECTED RESULT: (what should happen)\n",
+        "- ACTUAL RESULT: (what actually happens)\n",
+        "- ENVIRONMENT: (extracted system/version info)\n",
         "\"\"\"\n",
         "\n",
         "BUY_SOL_TASK_DESCRIPTION = \"\"\"\n",
@@ -151,7 +154,7 @@
         "the time to get in on the ground floor!\"\n",
         "\"\"\"\n",
         "\n",
-        "EMOJI_TASK_DESCRIPTION = \"\"\"\n",
+        "EMOJIFY_TASK_DESCRIPTION = \"\"\"\n",
         "Convert any incoming story provided by the user into a corresponding sequence of emojis.\n",
         "For example, if the user says, \"I went to the store to buy some eggs but forgot my wallet\",\n",
         "you should convert it into something like:\"🚶‍♂️➡️🏬🛒🥚…😱💳❌\".\n",
@@ -167,7 +170,7 @@
         "transaction workflow and postponement of asset acquisition.\".\n",
         "\"\"\"\n",
         "\n",
-        "# TASK_DESCRIPTION = EMOJI_TASK_DESCRIPTION"
+        "# TASK_DESCRIPTION = EMOJIFY_TASK_DESCRIPTION"
       ]
     },
     {
