Update model name

--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "OsrwCDQ5cviC"
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "so6r1_OG9en3"
       },
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "id": "I_AFDSOv_LrB"
@@ -112,8 +112,8 @@
         "#@title Advanced Settings\n",
         "\n",
         "# Model configuration\n",
-        "MODEL_NAME = \"custom-task-model-001\"  # Name for your trained model\n",
-        "PROJECT_NAME = \"custom-task-training\"  # Project name for tracking\n",
+        "MODEL_NAME = \"grammarly-model-001\"  # Name for your trained model\n",
+        "PROJECT_NAME = \"auto-rl\"  # Project name for tracking\n",
         "\n",
         "# Training configuration\n",
         "TRAINING_CONFIG = {\n",
@@ -180,7 +180,59 @@
         "cellView": "form",
         "id": "FQ2BfxTUKvgw"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "INFO 07-30 01:43:25 [importing.py:53] Triton module has been replaced with a placeholder.\n",
+            "INFO 07-30 01:43:25 [__init__.py:239] Automatically detected platform cuda.\n",
+            "Generating 25 training inputs...\n",
+            "\n",
+            "Generated 25 training inputs!\n",
+            "\n",
+            "First 5 examples:\n",
+            "\n",
+            "Example 1: Lets go to the beach on sunday.\n",
+            "\n",
+            "Example 2: Their planning there trip to France this upcoming August.\n",
+            "\n",
+            "Example 3: The manager and myself agree that your doing great work.\n",
+            "\n",
+            "Example 4: She should have came earlier to avoid the traffick.\n",
+            "\n",
+            "Example 5: The childrens' toys was scattered across the emty livingroom floor.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/root/sky_workdir/.venv/lib/python3.10/site-packages/art/local/state.py:5: UserWarning: WARNING: Unsloth should be imported before trl, transformers, peft to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
+            "\n",
+            "Please restructure your imports with 'import unsloth' at the top of your file.\n",
+            "  import unsloth  # type: ignore\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
+            "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
+            "==((====))==  Unsloth 2025.5.1: Fast Qwen2 patching. Transformers: 4.51.3. vLLM: 0.8.5.post1.\n",
+            "   \\\\   /|    NVIDIA H100 PCIe. Num GPUs = 1. Max memory: 79.097 GB. Platform: Linux.\n",
+            "O^O/ \\_/ \\    Torch: 2.6.0+cu124. CUDA: 9.0. CUDA Toolkit: 12.4. Triton: 3.2.0\n",
+            "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.29.post2. FA2 = False]\n",
+            " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
+            "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n",
+            "Unsloth: vLLM loading unsloth/qwen2.5-1.5b-instruct-unsloth-bnb-4bit with actual GPU utilization = 78.47%\n",
+            "Unsloth: Your GPU has CUDA compute capability 9.0 with VRAM = 79.1 GB.\n",
+            "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 4096. Num Sequences = 368.\n",
+            "Unsloth: vLLM's KV Cache can use up to 60.85 GB. Also swap space = 6 GB.\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Run this cell to train your model!\n",
         "import art\n",
