art-e notebook fixes

--- a/examples/art-e/art-e.ipynb
+++ b/examples/art-e/art-e.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "**Email Search Agent**\n",
     "\n",
-    "In this notebook, you will be using [ART](https://github.com/openpipe/art) to train your own ART•E agent from scratch! If you aren't familiar with ART•E, you can learn more about it in the [blog post](https://openpipe.ai/blog/art-e-mail-agent). \n",
+    "In this notebook, you will be using [ART](https://github.com/openpipe/art) to train your own ART•E agent from scratch! If you aren't familiar with ART•E, you can learn more about it in the [blog post](https://openpipe.ai/blog/art-e-mail-agent).\n",
     "\n",
     "Beginning with a Qwen 2.5 7B base model, you will train it to search through emails and answer questions about them. You will learn how to construct an [agentic environment](#Environment), how to define a [rollout](#Rollout), and how to run a [training loop](#Loop). You will also learn how to use [RULER](#ruler) to judge the quality of the agent's answers.\n",
     "\n",
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Installation"
+    "### Installation\n"
    ]
   },
   {
@@ -52,15 +52,16 @@
    "metadata": {},
    "source": [
     "<a name=\"Environment-Variables\"></a>\n",
+    "\n",
     "### Environment Variables\n",
     "\n",
-    "**OpenAI (required for RULER)**\n",
+    "**OpenAI (used for RULER judge model)**\n",
     "\n",
-    "OpenAI provides a unified API for multiple LLM providers. Our RULER judge model requires it in order to query third-party models to judge the quality of the agent's performance.\n",
+    "Our RULER reward function queries third-party models to judge the quality of the agent's performance. Any model supported by LiteLLM works. For this example we'll use OpenAI's o4-mini model, so we'll need to set the `OPENAI_API_KEY` environment variable.\n",
     "\n",
     "**Weights & Biases (optional)**\n",
     "\n",
-    "Later on in the notebook, we'll be creating a model that can automatically logs metrics to Weights & Biases and chat completions to Weave. In order to do so, you'll need to provide your Weights & Biases API key as an environment variable."
+    "Later on in the notebook, we'll be creating a model that can automatically logs metrics to Weights & Biases and chat completions to Weave. In order to do so, you'll need to provide your Weights & Biases API key as an environment variable.\n"
    ]
   },
   {
@@ -75,19 +76,15 @@
     "load_dotenv()\n",
     "\n",
     "# Required\n",
-    "OPENAI_API_KEY = \"\"\n",
-    "if OPENAI_API_KEY:\n",
-    "    os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"YOUR_API_KEY\"\n",
     "\n",
     "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
     "    raise ValueError(\n",
-    "        \"OPENAI_API_KEY is required for RULER functionality when using openai/o3.\"\n",
+    "        \"OPENAI_API_KEY is required for RULER functionality when using openai/o4-mini.\"\n",
     "    )\n",
     "\n",
     "# Optional\n",
-    "WANDB_API_KEY = \"\"\n",
-    "if WANDB_API_KEY:\n",
-    "    os.environ[\"WANDB_API_KEY\"] = WANDB_API_KEY\n",
+    "# os.environ[\"WANDB_API_KEY\"] = \"YOUR_API_KEY\"\n",
     "\n",
     "if not os.environ.get(\"WANDB_API_KEY\"):\n",
     "    print(\"WANDB_API_KEY is not set. We'll skip logging metrics to Weights & Biases.\")"
@@ -104,9 +101,10 @@
     "ART allows your agent to learn by interacting with its environment. In this example, we'll create an environment where the agent can search through emails and answer questions about them.\n",
     "\n",
     "The agent will have access to three tools:\n",
+    "\n",
     "1. `search_inbox` - Search for emails by keywords\n",
     "2. `read_email` - Read a specific email by message ID\n",
-    "3. `return_final_answer` - Return the final answer with source email IDs"
+    "3. `return_final_answer` - Return the final answer with source email IDs\n"
    ]
   },
   {
@@ -572,7 +570,7 @@
    "source": [
     "### Creating a Model\n",
     "\n",
-    "Now that we've defined the rules of our environment, we can create a model that will learn to search emails effectively. We'll use a Qwen 2.5 7B model for this example."
+    "Now that we've defined the rules of our environment, we can create a model that will learn to search emails effectively. We'll use a Qwen 2.5 7B model for this example.\n"
    ]
   },
   {
@@ -626,7 +624,7 @@
     "\n",
     "A rollout is a single episode of an agent performing its task. In this example, the rollout function presents the agent with an email search scenario, and the agent uses the available tools to search for emails and answer the question.\n",
     "\n",
-    "When the agent provides a final answer, the `correct` metric is calculated based on whether the answer is correct."
+    "When the agent provides a final answer, the `correct` metric is calculated based on whether the answer is correct.\n"
    ]
   },
   {
@@ -678,7 +676,7 @@
     "    ]\n",
     "\n",
     "    response = await acompletion(\n",
-    "        model=\"openai/gpt-4o\",\n",
+    "        model=\"openai/gpt-4.1\",\n",
     "        messages=messages,\n",
     "        response_format=CorrectnessJudgeResponse,\n",
     "    )\n",
@@ -816,6 +814,7 @@
    "metadata": {},
    "source": [
     "<a name=\"ruler\"></a>\n",
+    "\n",
     "### How RULER works\n",
     "\n",
     "**RULER** leverages two key insights:\n",
@@ -831,7 +830,7 @@
     "4. An LLM judge scores each trajectory from 0 to 1 based on goal achievement\n",
     "5. These scores are used directly as rewards in GRPO training\n",
     "\n",
-    "To learn more about **RULER**, check out the [RULER docs](https://art.openpipe.ai/fundamentals/ruler)."
+    "To learn more about **RULER**, check out the [RULER docs](https://art.openpipe.ai/fundamentals/ruler).\n"
    ]
   },
   {
@@ -989,7 +988,7 @@
     "\n",
     "The `gather` step will wait for all of the trajectories to be generated, then it will use RULER to assign relative scores to each trajectory.\n",
     "\n",
-    "Our notebook will then delete all but the most recent checkpoint and train the model on the scored trajectories."
+    "Our notebook will then delete all but the most recent checkpoint and train the model on the scored trajectories.\n"
    ]
   },
   {
@@ -1017,17 +1016,19 @@
     "    initial_step=await model.get_step(),\n",
     ")\n",
     "\n",
-    "for batch, epoch, global_step, epoch_step in training_iterator:\n",
-    "    print(f\"Training step {global_step}, epoch {epoch}, epoch step {epoch_step}\")\n",
-    "    print(f\"Batch contains {len(batch)} scenarios\")\n",
+    "for batch in training_iterator:\n",
+    "    print(\n",
+    "        f\"Training step {batch.step}, epoch {batch.epoch}, epoch step {batch.epoch_step}\"\n",
+    "    )\n",
+    "    print(f\"Batch contains {len(batch.items)} scenarios\")\n",
     "\n",
     "    # Create trajectory groups for this batch (similar to train.py)\n",
     "    groups = []\n",
-    "    for scenario in batch:\n",
+    "    for scenario in batch.items:\n",
     "        groups.append(\n",
     "            art.TrajectoryGroup(\n",
     "                (\n",
-    "                    rollout(model, EmailScenario(step=global_step, scenario=scenario))\n",
+    "                    rollout(model, EmailScenario(step=batch.step, scenario=scenario))\n",
     "                    for _ in range(training_config[\"rollouts_per_group\"])\n",
     "                )\n",
     "            )\n",
@@ -1037,7 +1038,7 @@
     "    finished_groups = await art.gather_trajectory_groups(\n",
     "        groups,\n",
     "        pbar_desc=\"gather\",\n",
-    "        max_exceptions=training_config[\"rollouts_per_group\"] * len(batch),\n",
+    "        max_exceptions=training_config[\"rollouts_per_group\"] * len(batch.items),\n",
     "    )\n",
     "\n",
     "    judged_groups = []\n",
@@ -1055,10 +1056,10 @@
     "        _config={\"logprob_calculation_chunk_size\": 8},\n",
     "    )\n",
     "\n",
-    "    print(f\"Completed training step {global_step}\")\n",
+    "    print(f\"Completed training step {batch.step}\")\n",
     "\n",
     "    # Stop after max_steps for demo purposes (adjust as needed)\n",
-    "    if global_step >= training_config[\"max_steps\"]:\n",
+    "    if batch.step >= training_config[\"max_steps\"]:\n",
     "        break"
    ]
   },
@@ -1070,7 +1071,7 @@
     "\n",
     "Just like that, you've trained an agent to search emails and answer questions! Now it's time to use your model outside of the training loop.\n",
     "\n",
-    "Check out the code below for a small demo of the model you just trained!"
+    "Check out the code below for a small demo of the model you just trained!\n"
    ]
   },
   {
@@ -1162,7 +1163,7 @@
     "\n",
     "Questions? Join the Discord and ask away! For feature requests or to leave a star, visit our [Github](https://github.com/openpipe/art).\n",
     "\n",
-    "</div>"
+    "</div>\n"
    ]
   }
  ],
