--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -587,7 +587,7 @@
     "    f\".art/{model.project}/models/{model.name}/{await model.get_step():04d}\"\n",
     ")\n",
     "\n",
-    "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "peft_model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name=lora_model_path,\n",
     "    max_seq_length=16384,\n",
     "    dtype=torch.bfloat16,\n",
@@ -595,7 +595,7 @@
     ")\n",
     "\n",
     "if False: # Change to True to upload finetune\n",
-    "    model.push_to_hub_merged(\n",
+    "    peft_model.push_to_hub_merged(\n",
     "        f\"HF_ACCOUNT/{model.name}\", tokenizer,\n",
     "        token = \"hf_...\"\n",
     "    )"
