--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/upload-hf/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "caZYLROd8xnV"
       },
       "source": [
@@ -577,7 +567,7 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "a3QXu07kgegt"
+        "id": "POKVurUmhPew"
       },
       "outputs": [],
       "source": [
@@ -639,8 +629,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": ".venv",
