Add cell to AutoRL for uploading to HF (#279)
* Add section for uploading to HF

* Rename model

* Created using Colab

* Created using Colab

* Fix ruff

* Remove extra space

* Created using Colab

--- a/examples/auto_rl.ipynb
+++ b/examples/auto_rl.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/auto-art/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/OpenPipe/ART/blob/upload-hf/examples/auto_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,14 +43,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "OsrwCDQ5cviC"
       },
       "outputs": [],
       "source": [
-        "#@title 💿 Installation\n",
+        "# @title 💿 Installation\n",
         "\n",
         "!uv pip install -q openpipe-art==0.3.11.post2 langchain-core tenacity \"gql<4\" --prerelease allow --no-cache-dir"
       ]
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "so6r1_OG9en3"
       },
@@ -94,7 +94,7 @@
         "I <original>are</original><corrected>am</corrected> going to the store to buy <original>sum</original><corrected>some</corrected> eggs.\n",
         "\"\"\"\n",
         "\n",
-        "TASK_DESCRIPTION = GRAMMARLY_TASK_DESCRIPTION # See more tasks in Advanced Settings\n",
+        "TASK_DESCRIPTION = GRAMMARLY_TASK_DESCRIPTION  # See more tasks in Advanced Settings\n",
         "\n",
         "# Choose the base model to train\n",
         "BASE_MODEL = \"Qwen/Qwen2.5-1.5B-Instruct\"  # Options: \"Qwen/Qwen2.5-3B-Instruct\", \"Qwen/Qwen2.5-7B-Instruct\", etc."
@@ -102,14 +102,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "I_AFDSOv_LrB"
       },
       "outputs": [],
       "source": [
-        "#@title Advanced Settings\n",
+        "# @title Advanced Settings\n",
         "\n",
         "# Model configuration\n",
         "MODEL_NAME = \"grammarly-model-001\"  # Name for your trained model\n",
@@ -127,8 +127,8 @@
         "\n",
         "NUM_TEST_INPUTS = 5  # Number of test inputs to generate\n",
         "RULER_MODEL = \"openrouter/deepseek/deepseek-r1-0528\"  # Model for RULER evaluation\n",
-        "SYSTEM_PROMPT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
-        "INPUT_GENERATION_MODEL=\"openrouter/moonshotai/kimi-k2\"\n",
+        "SYSTEM_PROMPT_GENERATION_MODEL = \"openrouter/moonshotai/kimi-k2\"\n",
+        "INPUT_GENERATION_MODEL = \"openrouter/moonshotai/kimi-k2\"\n",
         "\n",
         "# GPU configuration (for T4 — keep these as-is unless you have a reason to change them)\n",
         "MAX_SEQ_LENGTH = 4096  # Maximum sequence length\n",
@@ -180,61 +180,9 @@
         "cellView": "form",
         "id": "FQ2BfxTUKvgw"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "INFO 07-30 01:43:25 [importing.py:53] Triton module has been replaced with a placeholder.\n",
-            "INFO 07-30 01:43:25 [__init__.py:239] Automatically detected platform cuda.\n",
-            "Generating 25 training inputs...\n",
-            "\n",
-            "Generated 25 training inputs!\n",
-            "\n",
-            "First 5 examples:\n",
-            "\n",
-            "Example 1: Lets go to the beach on sunday.\n",
-            "\n",
-            "Example 2: Their planning there trip to France this upcoming August.\n",
-            "\n",
-            "Example 3: The manager and myself agree that your doing great work.\n",
-            "\n",
-            "Example 4: She should have came earlier to avoid the traffick.\n",
-            "\n",
-            "Example 5: The childrens' toys was scattered across the emty livingroom floor.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/root/sky_workdir/.venv/lib/python3.10/site-packages/art/local/state.py:5: UserWarning: WARNING: Unsloth should be imported before trl, transformers, peft to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
-            "\n",
-            "Please restructure your imports with 'import unsloth' at the top of your file.\n",
-            "  import unsloth  # type: ignore\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
-            "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-            "==((====))==  Unsloth 2025.5.1: Fast Qwen2 patching. Transformers: 4.51.3. vLLM: 0.8.5.post1.\n",
-            "   \\\\   /|    NVIDIA H100 PCIe. Num GPUs = 1. Max memory: 79.097 GB. Platform: Linux.\n",
-            "O^O/ \\_/ \\    Torch: 2.6.0+cu124. CUDA: 9.0. CUDA Toolkit: 12.4. Triton: 3.2.0\n",
-            "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.29.post2. FA2 = False]\n",
-            " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
-            "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n",
-            "Unsloth: vLLM loading unsloth/qwen2.5-1.5b-instruct-unsloth-bnb-4bit with actual GPU utilization = 78.47%\n",
-            "Unsloth: Your GPU has CUDA compute capability 9.0 with VRAM = 79.1 GB.\n",
-            "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 4096. Num Sequences = 368.\n",
-            "Unsloth: vLLM's KV Cache can use up to 60.85 GB. Also swap space = 6 GB.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "#@title Run this cell to train your model!\n",
+        "# @title Run this cell to train your model!\n",
         "import art\n",
         "from art.local import LocalBackend\n",
         "from art.rewards import ruler_score_group\n",
@@ -269,10 +217,14 @@
         "class TrainingInput(BaseModel):\n",
         "    input: str = Field(description=\"The input text for the task\")\n",
         "\n",
+        "\n",
         "class TrainingDataset(BaseModel):\n",
         "    inputs: List[TrainingInput] = Field(description=\"List of training inputs\")\n",
         "\n",
-        "async def generate_training_inputs(task_description: str, num_examples: int = 50) -> List[str]:\n",
+        "\n",
+        "async def generate_training_inputs(\n",
+        "    task_description: str, num_examples: int = 50\n",
+        ") -> List[str]:\n",
         "    \"\"\"Generate diverse training inputs for the given task\"\"\"\n",
         "\n",
         "    system_prompt = f\"\"\"You are a helpful assistant that generates diverse, high-quality training inputs.\n",
@@ -291,7 +243,10 @@
         "\n",
         "    messages = [\n",
         "        {\"role\": \"system\", \"content\": system_prompt},\n",
-        "        {\"role\": \"user\", \"content\": f\"Generate {num_examples} input examples for the task described above. Return them in the form of a list.\"}\n",
+        "        {\n",
+        "            \"role\": \"user\",\n",
+        "            \"content\": f\"Generate {num_examples} input examples for the task described above. Return them in the form of a list.\",\n",
+        "        },\n",
         "    ]\n",
         "\n",
         "    print(f\"Generating {num_examples} training inputs...\")\n",
@@ -300,29 +255,33 @@
         "\n",
         "    i = 0\n",
         "    while i < 5 and len(inputs) < num_examples:\n",
-        "      i += 1\n",
-        "      response = await acompletion(\n",
-        "          model=INPUT_GENERATION_MODEL,\n",
-        "          messages=messages,\n",
-        "          response_format=TrainingDataset,\n",
-        "          temperature=1.0,\n",
-        "      )\n",
+        "        i += 1\n",
+        "        response = await acompletion(\n",
+        "            model=INPUT_GENERATION_MODEL,\n",
+        "            messages=messages,\n",
+        "            response_format=TrainingDataset,\n",
+        "            temperature=1.0,\n",
+        "        )\n",
         "\n",
-        "      dataset = TrainingDataset.model_validate_json(response.choices[0].message.content)\n",
-        "      inputs = [ex.input for ex in dataset.inputs]\n",
-        "\n",
+        "        dataset = TrainingDataset.model_validate_json(\n",
+        "            response.choices[0].message.content\n",
+        "        )\n",
+        "        inputs = [ex.input for ex in dataset.inputs]\n",
         "\n",
         "    if len(inputs) < num_examples:\n",
-        "      raise ValueError(f\"Failed to generate {num_examples} training inputs.\")\n",
+        "        raise ValueError(f\"Failed to generate {num_examples} training inputs.\")\n",
         "\n",
         "    return inputs\n",
         "\n",
+        "\n",
         "# Generate training inputs\n",
-        "training_inputs = await generate_training_inputs(TASK_DESCRIPTION, num_examples=TRAINING_CONFIG[\"num_training_inputs\"])\n",
+        "training_inputs = await generate_training_inputs(\n",
+        "    TASK_DESCRIPTION, num_examples=TRAINING_CONFIG[\"num_training_inputs\"]\n",
+        ")\n",
         "print(f\"\\nGenerated {len(training_inputs)} training inputs!\")\n",
         "print(\"\\nFirst 5 examples:\")\n",
         "for i, input_text in enumerate(training_inputs[:5]):\n",
-        "    print(f\"\\nExample {i+1}: {input_text}\")\n",
+        "    print(f\"\\nExample {i + 1}: {input_text}\")\n",
         "\n",
         "# =========== Model Creation Code ===========\n",
         "\n",
@@ -363,9 +322,9 @@
         "# ============ Rollout Function Code =============\n",
         "\n",
         "\n",
-        "\n",
         "if os.getenv(\"WANDB_API_KEY\", \"\"):\n",
         "    weave.init(PROJECT_NAME, settings={\"print_call_link\": False})\n",
+        "\n",
         "\n",
         "# Generate a system prompt for the task\n",
         "async def generate_system_prompt(task_description: str) -> str:\n",
@@ -374,12 +333,12 @@
         "    messages = [\n",
         "        {\n",
         "            \"role\": \"system\",\n",
-        "            \"content\": \"Generate a clear, concise system prompt for a model that will perform the following task. The prompt should be direct and instructional.\"\n",
+        "            \"content\": \"Generate a clear, concise system prompt for a model that will perform the following task. The prompt should be direct and instructional.\",\n",
         "        },\n",
         "        {\n",
         "            \"role\": \"user\",\n",
-        "            \"content\": f\"Task: {task_description}\\n\\nGenerate a system prompt for this task.\"\n",
-        "        }\n",
+        "            \"content\": f\"Task: {task_description}\\n\\nGenerate a system prompt for this task.\",\n",
+        "        },\n",
         "    ]\n",
         "\n",
         "    response = await acompletion(\n",
@@ -390,12 +349,15 @@
         "\n",
         "    return response.choices[0].message.content.strip()\n",
         "\n",
+        "\n",
         "SYSTEM_PROMPT = await generate_system_prompt(TASK_DESCRIPTION)\n",
         "print(f\"Generated system prompt:\\n\\n{SYSTEM_PROMPT}\")\n",
+        "\n",
         "\n",
         "class TaskInput(BaseModel):\n",
         "    step: int\n",
         "    input_text: str\n",
+        "\n",
         "\n",
         "@weave.op\n",
         "async def rollout(model: art.Model, task_input: TaskInput) -> art.Trajectory:\n",
@@ -438,6 +400,7 @@
         "\n",
         "    return traj\n",
         "\n",
+        "\n",
         "print(\"\\nRollout function defined!\")\n",
         "\n",
         "\n",
@@ -452,7 +415,10 @@
         "good_trajectory = art.Trajectory(\n",
         "    messages_and_choices=[\n",
         "        *base_messages,\n",
-        "        {\"role\": \"assistant\", \"content\": \"Could you please send me the report at your earliest convenience? Thank you.\"},\n",
+        "        {\n",
+        "            \"role\": \"assistant\",\n",
+        "            \"content\": \"Could you please send me the report at your earliest convenience? Thank you.\",\n",
+        "        },\n",
         "    ],\n",
         "    reward=0,\n",
         ")\n",
@@ -502,10 +468,7 @@
         "# ============ Training Loop =============\n",
         "\n",
         "# Convert training inputs to TaskInput objects\n",
-        "training_task_inputs = [\n",
-        "    TaskInput(step=0, input_text=inp)\n",
-        "    for inp in training_inputs\n",
-        "]\n",
+        "training_task_inputs = [TaskInput(step=0, input_text=inp) for inp in training_inputs]\n",
         "\n",
         "# Create training iterator\n",
         "training_iterator = iterate_dataset(\n",
@@ -517,8 +480,12 @@
         "\n",
         "print(f\"Starting training with {len(training_task_inputs)} inputs...\")\n",
         "print(f\"Training for {TRAINING_CONFIG['num_epochs']} epoch(s)\")\n",
-        "print(f\"Generating {TRAINING_CONFIG['rollouts_per_group']} responses per input for RULER to compare\")\n",
-        "print(f\"\\nWhy multiple responses? RULER needs to compare different attempts to learn what's good!\")\n",
+        "print(\n",
+        "    f\"Generating {TRAINING_CONFIG['rollouts_per_group']} responses per input for RULER to compare\"\n",
+        ")\n",
+        "print(\n",
+        "    \"\\nWhy multiple responses? RULER needs to compare different attempts to learn what's good!\"\n",
+        ")\n",
         "\n",
         "for batch, epoch, global_step, epoch_step in training_iterator:\n",
         "    print(f\"\\nTraining step {global_step}, epoch {epoch}, epoch step {epoch_step}\")\n",
@@ -573,8 +540,13 @@
         "    print(f\"Completed training step {global_step}\")\n",
         "\n",
         "    # Stop after configured steps (if limit is set)\n",
-        "    if TRAINING_CONFIG[\"max_training_steps\"] and global_step >= TRAINING_CONFIG[\"max_training_steps\"]:\n",
-        "        print(f\"Reached maximum training steps ({TRAINING_CONFIG['max_training_steps']})\")\n",
+        "    if (\n",
+        "        TRAINING_CONFIG[\"max_training_steps\"]\n",
+        "        and global_step >= TRAINING_CONFIG[\"max_training_steps\"]\n",
+        "    ):\n",
+        "        print(\n",
+        "            f\"Reached maximum training steps ({TRAINING_CONFIG['max_training_steps']})\"\n",
+        "        )\n",
         "        break\n",
         "\n",
         "print(\"\\n✅ Training completed!\")"
@@ -589,29 +561,28 @@
       },
       "outputs": [],
       "source": [
-        "#@title Test Your Model!\n",
+        "# @title Test Your Model!\n",
         "\n",
         "# Generate test inputs\n",
         "print(\"Generating test inputs...\")\n",
-        "test_inputs = await generate_training_inputs(TASK_DESCRIPTION, num_examples=NUM_TEST_INPUTS)\n",
+        "test_inputs = await generate_training_inputs(\n",
+        "    TASK_DESCRIPTION, num_examples=NUM_TEST_INPUTS\n",
+        ")\n",
         "\n",
         "print(f\"\\n🧪 Testing the trained model on {len(test_inputs)} new inputs:\\n\")\n",
         "print(\"=\" * 80)\n",
         "\n",
         "for i, test_input in enumerate(test_inputs):\n",
-        "    print(f\"\\nTest {i+1}:\")\n",
+        "    print(f\"\\nTest {i + 1}:\")\n",
         "    print(f\"Input: {test_input}\")\n",
         "\n",
         "    # Run the model\n",
-        "    test_task_input = TaskInput(\n",
-        "        step=999,\n",
-        "        input_text=test_input\n",
-        "    )\n",
+        "    test_task_input = TaskInput(step=999, input_text=test_input)\n",
         "    result_trajectory = await rollout(model, test_task_input)\n",
         "\n",
         "    # Extract the model's response\n",
         "    messages = result_trajectory.messages()\n",
-        "    model_response = messages[-1]['content'] if messages else \"No response\"\n",
+        "    model_response = messages[-1][\"content\"] if messages else \"No response\"\n",
         "\n",
         "    print(f\"Model output: {model_response}\")\n",
         "    print(\"-\" * 80)\n",
@@ -621,7 +592,38 @@
         "print(\"\\nTo use this model in production:\")\n",
         "print(\"1. The model checkpoint is saved in ./.art/\")\n",
         "print(\"2. You can load it using the vLLM library\")\n",
-        "print(\"3. Or continue training with more examples by adjusting the configuration at the top\")"
+        "print(\n",
+        "    \"3. Or continue training with more examples by adjusting the configuration at the top\"\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "utI-VYM8s5lo"
+      },
+      "outputs": [],
+      "source": [
+        "# @title Upload to Hugging Face 🤗\n",
+        "\n",
+        "import torch\n",
+        "from unsloth import FastLanguageModel\n",
+        "\n",
+        "lora_model_path = (\n",
+        "    f\".art/{model.project}/models/{model.name}/{await model.get_step():04d}\"\n",
+        ")\n",
+        "\n",
+        "peft_model, tokenizer = FastLanguageModel.from_pretrained(\n",
+        "    model_name=lora_model_path,\n",
+        "    max_seq_length=16384,\n",
+        "    dtype=torch.bfloat16,\n",
+        "    load_in_4bit=True,\n",
+        ")\n",
+        "\n",
+        "if False:  # Change to True to upload finetune\n",
+        "    peft_model.push_to_hub_merged(f\"HF_ACCOUNT/{model.name}\", tokenizer, token=\"hf_...\")"
       ]
     },
     {
@@ -659,8 +661,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
