Redeclare clients and update openpipe-art version in notebooks (#287)

--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!uv pip install openpipe-art==0.3.11.post2 \"gql<4\" --prerelease allow --no-cache-dir"
+    "!uv pip install openpipe-art==0.3.11.post3 \"gql<4\" --prerelease allow --no-cache-dir"
    ]
   },
   {
@@ -386,6 +386,7 @@
     "import requests\n",
     "from pydantic import BaseModel\n",
     "import weave\n",
+    "from openai import AsyncOpenAI\n",
     "\n",
     "if os.getenv(\"WANDB_API_KEY\", \"\"):\n",
     "    weave.init(model.project, settings={\"print_call_link\": False})\n",
@@ -398,7 +399,10 @@
     "@weave.op\n",
     "@art.retry(exceptions=(requests.ReadTimeout))\n",
     "async def rollout(model: art.Model, scenario: Scenario2048) -> art.Trajectory:\n",
-    "    client = model.openai_client()\n",
+    "    client = AsyncOpenAI(\n",
+    "        base_url=model.inference_base_url,\n",
+    "        api_key=model.inference_api_key,\n",
+    "    )\n",
     "    game = generate_game()\n",
     "\n",
     "    move_number = 0\n",
