--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"021\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"029\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
@@ -104,7 +104,7 @@
     "        ),\n",
     "        art.gather_trajectory_groups(\n",
     "            (\n",
-    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(32))\n",
+    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(16))\n",
     "                for puzzle in train_puzzles[i * stride : (i + 1) * stride]\n",
     "            ),\n",
     "            pbar_desc=\"train\",\n",
@@ -120,6 +120,10 @@
     "    await model.train(\n",
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=5e-6),\n",
+    "        _config=art.dev.TrainConfig(\n",
+    "            advantage_balance=-0.5,\n",
+    "            scale_rewards=False,\n",
+    "        ),\n",
     "    )"
    ]
   }
